generator client {
  provider = "prisma-client"
  output   = "../generated/prisma"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

generator dbml {
  provider   = "prisma-dbml-generator"
  output     = "../dbml" // Optional: output directory relative to prisma folder
  outputName = "schema.dbml" // Optional: output file name
}

model Admin {
  id           Int       @id @default(autoincrement())
  username     String    @unique
  name         String
  phone        String
  passwordHash String    @map("password_hash")
  jti          String?   @unique @map("jti")
  jtiExpiresAt DateTime? @map("jti_expires_at")
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")

  @@index([username])
  @@map("admins")
}

model Region {
  id        Int      @id @default(autoincrement())
  name      String   @unique
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  areas     Area[]
  retailers Retailer[]

  @@map("regions")
}

model Area {
  id        Int      @id @default(autoincrement())
  name      String
  regionId  Int      @map("region_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  region      Region      @relation(fields: [regionId], references: [id])
  territories Territory[]
  retailers   Retailer[]

  @@unique([name, regionId])
  @@index([regionId])
  @@map("areas")
}

model Distributor {
  id        Int      @id @default(autoincrement())
  name      String   @unique
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  retailers Retailer[]

  @@map("distributors")
}

model Territory {
  id        Int      @id @default(autoincrement())
  name      String
  areaId    Int      @map("area_id")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  area      Area       @relation(fields: [areaId], references: [id])
  retailers Retailer[]

  @@unique([name, areaId])
  @@index([areaId])
  @@map("territories")
}

model Retailer {
  id            Int      @id @default(autoincrement())
  uid           String   @unique
  name          String
  phone         String
  regionId      Int      @map("region_id")
  areaId        Int      @map("area_id")
  distributorId Int      @map("distributor_id")
  territoryId   Int      @map("territory_id")
  points        Int      @default(0)
  routes        Json
  createdAt     DateTime @default(now()) @map("created_at")
  updatedAt     DateTime @updatedAt @map("updated_at")

  region      Region      @relation(fields: [regionId], references: [id])
  area        Area        @relation(fields: [areaId], references: [id])
  distributor Distributor @relation(fields: [distributorId], references: [id])
  territory   Territory   @relation(fields: [territoryId], references: [id])

  assignments SalesRepRetailer[]

  @@index([regionId])
  @@index([areaId])
  @@index([distributorId])
  @@index([territoryId])
  @@map("retailers")
}

model SalesRep {
  id           Int       @id @default(autoincrement())
  username     String    @unique
  name         String
  phone        String
  passwordHash String    @map("password_hash")
  jti          String?   @unique @map("jti")
  jtiExpiresAt DateTime? @map("jti_expires_at")
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")

  assignments SalesRepRetailer[]

  @@index([username])
  @@map("sales_reps")
}

model SalesRepRetailer {
  salesRepId Int      @map("sales_rep_id")
  retailerId Int      @map("retailer_id")
  note       String?
  assignedAt DateTime @default(now()) @map("assigned_at")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")

  salesRep SalesRep @relation(fields: [salesRepId], references: [id], onDelete: Cascade)
  retailer Retailer @relation(fields: [retailerId], references: [id], onDelete: Cascade)

  @@id([salesRepId, retailerId])
  @@index([salesRepId])
  @@index([retailerId])
  @@map("sales_rep_retailers")
}
